--- a/bin/org/copy/package.json
+++ b/bin/org/copy/package.json
@@ -5,20 +5,21 @@
   "description": "A nooljs application",
   "keywords": [],
   "dependencies": {
-    "async": "1.5.0",
-	"body-parser": "1.14.1",
-    "express": "^4.13.3",	
-	"fs-extra": "0.30.0",
-	"mongodb": "2.1.16",
-    "mysql": "2.10.2",
-	"nooljs": "^0.0.4",
-	"pg": "4.5.4",
-	"q": "1.4.1",
-	"replace": "0.3.0",
-	"require-directory": "2.1.1",
-	"save": "2.3.0",
-	"seriate": "0.5.3",
-	"socket.io": "1.4.5"
+	"async": "^1.5.2",
+    "body-parser": "1.15.2",
+    "express": "^4.14.0",
+    "fs-extra": "0.30.0",
+    "mongodb": "^2.1.21",
+    "mysql": "^2.11.1",
+	"nooljs": "^0.0.5",
+    "pg": "5.1.0",
+    "q": "^2.0.3",
+    "replace": "0.3.0",
+    "require-directory": "2.1.1",
+    "save": "2.3.0",
+    "seriate": "0.7.1",
+    "shelljs": "0.7.0",
+    "socket.io": "^1.4.6"
   },
   "scripts": {
     "debug": "node debug app.js",
