--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "nooljs",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Full stack JavaScript framework created top of Nodejs, express, and Socket-io, and Anjularjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Chandru Krishnar ,chandru0507@gmail.com",
+  "author": "Chandru(Puva) Krishnar ,chandru0507@gmail.com",
   "license": "MIT",
   "repository": {
     "type": "git",
