--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nooljs",
-  "version": "0.0.7",
-  "description": "Full stack JavaScript framework created top of Nodejs, express, and Socket-io, and Anjularjs",
+  "version": "0.0.8",
+  "description": "Full stack JavaScript framework created top of Nodejs, express, and Socket-io, and Angularjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,7 +12,7 @@
     "url": "git://github.com/cgkrish/nooljs/nooljs.git"
   },
   "keywords":[
-   "Anjularjs",
+   "Angularjs",
    "Expressjs",
    "nodejs",
    "socket-io",
@@ -26,20 +26,20 @@
   ,
   "main": "./lib/index.js",
   "dependencies": {
-    "async": "^1.5.2",
+    "async": "^2.0.1",
     "body-parser": "1.15.2",
     "express": "^4.14.0",
     "fs-extra": "0.30.0",
-    "mongodb": "^2.1.21",
+     "mongodb": "^2.2.10",
     "mysql": "^2.11.1",
-    "pg": "5.1.0",
+    "pg": "6.1.0",
     "q": "^2.0.3",
     "replace": "0.3.0",
     "require-directory": "2.1.1",
     "save": "2.3.0",
-    "seriate": "0.7.1",
-    "shelljs": "0.7.0",
-    "socket.io": "^1.4.6"
+    "seriate": "0.8.0",
+    "shelljs": "0.7.4",
+    "socket.io": "^1.4.8"
   },
   "preferGlobal": true,
   "bin": {
