--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nooljs",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Full stack JavaScript framework created top of Nodejs, express, and Socket-io, and Angularjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +9,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/cgkrish/nooljs/nooljs.git"
+    "url": "git://github.com/nooljs/nooljs.git"
   },
   "keywords":[
    "Angularjs",
@@ -29,7 +29,7 @@
     "async": "^2.0.1",
     "body-parser": "1.15.2",
     "express": "^4.14.0",
-    "fs-extra": "0.30.0",
+    "fs-extra": "1.0.0",
      "mongodb": "^2.2.10",
     "mysql": "^2.11.1",
     "pg": "6.1.0",
@@ -38,7 +38,7 @@
     "require-directory": "2.1.1",
     "save": "2.3.0",
     "seriate": "0.8.0",
-    "shelljs": "0.7.4",
+    "shelljs": "^0.7.5",
     "socket.io": "^1.4.8"
   },
   "preferGlobal": true,
